--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-// universal selector
+/* universal selector */
 * {
 	margin:0;
 	font-family: Arial, sans-serif;
 }
-// body selector
+/* body selector */
 body {
     
   }
