--- a/style.css
+++ b/style.css
@@ -5,8 +5,71 @@
 }
 /* body selector */
 body {
-  margin: 0;
+  background-color: rgb(0, 0, 0);
 }
+
+.container {
+  background-color: rgb(107, 113, 114);
+  margin: 5px;
+  padding: 28px;
+}
+
+.nav {
+  width: 100%;
+  background-color: rgb(205, 206, 161);
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+}
+
+.logo {
+  position: relative;
+  padding: 20px;
+  background-color: #8ab8ea;
+}
+
+.navlinks ul {
+  display: flex;
+  background-color: #8d8b8b;
+  padding: 5px;
+}
+
+.navlinks li {
+  display: block;
+  margin: 0px 20px;
+  background-color: #d3d3d3;
+}
+
+.profilemenu {
+  background-color: #8d8b8b;
+  display: flex;
+}
+.profilemenu p {
+ padding: 0 5px;
+}
+.username {
+  background-color: #d3d3d3;
+}
+
+.profile-pic {
+  background-color: #d3d3d3;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #navbar {
   position: fixed;
   top: 0;
